# docs/swagger.yaml
@@ -290,8 +290,8 @@ paths:
       summary: Получение страны
       tags:
       - country
-  /api/v2/country:
-    get:
+  /api/v2/country/all:
+    post:
       consumes:
       - application/json
       description: Возвращает страны
