# internal/ports/httpgin/router.go
@@ -9,7 +9,7 @@ import (
 // Use AuthMiddleware before progress request
 func ProtectedRouter(r *gin.RouterGroup, a *app.App) {
 	r.GET("/country/:country_id", func(c *gin.Context) { getCountryById(c, a) })
-	r.POST("/country", func(c *gin.Context) { getCountryAll(c, a) })
+	r.POST("/country/all", func(c *gin.Context) { getCountryAll(c, a) })
 	r.POST("/country", func(c *gin.Context) { createCountry(c, a) })
 	r.PUT("/country", func(c *gin.Context) { updateCountryById(c, a) })
 	r.DELETE("/country", func(c *gin.Context) { deleteCountryById(c, a) })
